add AdamLin all

--- a/Collection.html
+++ b/Collection.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>AdamLin's Page</title>
+		<title>Adam's Collection</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,37 +20,37 @@
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="Experience.html">Experience</a>
-						<a href="Collection.html">Collection</a>
 						<a href="http://www.thu.edu.tw/">THU</a>
 					</nav>
 				</div>
 			</header>
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
-		<!-- Banner -->
-			<section id="banner">
+		<!-- Main -->
+			<section id="main" >
 				<div class="inner">
-					<h1>AdamLin: <span>軟體工程師之路。<br />
-					</span></h1>
-					<ul class="actions">
-						<li><a href="#" class="button alt">start</a></li>
-					</ul>
+					<header class="major special">
+						<h1>Collection</h1>
+						<p>Below are my collection of web-develop</p>
+					</header>
+					 <figcaption style="text-align: center;"><a href="https://e-services.taichung.gov.tw/jsp/indexOnline.action">台中服務e櫃台</a></figcaption>
+						<figure style="text-align: center;">
+							 <img src="images/Taichung_e.png" style="width:50%;height:50%;" >	
+						</figure>
+<br>
+<br>
+					 <figcaption style="text-align: center;"><a href="https://adam831026.github.io/Baidu/Mission02/Mission02.html">靜態網頁練習</a></figcaption>
+						<figure style="text-align: center;">
+							 <img src="images/BaiduMission02.png" style="width:50%;height:50%;" >	
+						</figure>
+
+					 <figcaption style="text-align: center;"><a href="http://120.109.150.171/Map/ajax_test.html">公車動態系統</a></figcaption>
+						<figure style="text-align: center;">
+							 <img src="" style="width:50%;height:50%;" >	
+						</figure>
 				</div>
 			</section>
 
-		<!-- One -->
-			<section id="one">
-				<div class="inner">
-					<header>
-						<h2>About AdamLin:</h2>
-					</header>
-					<ul style="font-family:DFKai-sb;">
-						<li>東海大學&nbsp;資訊工程系</li>
-						<li>Fitness&nbsp;Life</li>
-						<li>Software-Developer</li>
-					</ul>
-				</div>
-			</section>
 		<!-- Footer -->
 			<section id="footer">
 				<div class="inner">
