add Todolist in collection.html and delete some pic at /images

--- a/Collection.html
+++ b/Collection.html
@@ -33,20 +33,23 @@
 						<h1>Collection</h1>
 						<p>Below are my collection of web-develop</p>
 					</header>
-					 <figcaption style="text-align: center;"><a href="https://e-services.taichung.gov.tw/jsp/indexOnline.action">台中服務e櫃台</a></figcaption>
+					 <figcaption style="text-align: center;  font-size: 30px; font-family:DFKai-sb;">台中服務e櫃台</figcaption>
 						<figure style="text-align: center;">
-							 <img src="images/Taichung_e.png" style="width:50%;height:50%;" >	
+							 <a href="https://e-services.taichung.gov.tw/jsp/indexOnline.action"><img src="images/Taichung_e.png" style="width:50%;height:50%;" ></a>	
 						</figure>
 <br>
 <br>
-					 <figcaption style="text-align: center;"><a href="https://adam831026.github.io/Baidu/Mission02/Mission02.html">靜態網頁練習</a></figcaption>
+					 <figcaption style="text-align: center; font-size: 30px;font-family:DFKai-sb; ">靜態網頁練習</figcaption>
 						<figure style="text-align: center;">
-							 <img src="images/BaiduMission02.png" style="width:50%;height:50%;" >	
+						<a href="https://adam831026.github.io/Baidu/Mission02/Mission02.html"><img src="images/BaiduMission02.png" style="width:50%;height:50%;"></a>
 						</figure>
-
-					 <figcaption style="text-align: center;"><a href="http://120.109.150.171/Map/ajax_test.html">公車動態系統</a></figcaption>
+					 <figcaption style="text-align: center;  font-size: 30px; font-family:DFKai-sb;">公車動態系統</figcaption>
 						<figure style="text-align: center;">
-							 <img src="" style="width:50%;height:50%;" >	
+						<a href="http://120.109.150.171/Map/ajax_test.html"><img src="images/bus.png" style="width:50%;height:50%;"></a>	
+						</figure>
+					 <figcaption style="text-align: center;  font-size: 30px; font-family:DFKai-sb;">增刪互動選單</figcaption>
+						<figure style="text-align: center;">
+						<a href="https://adam831026.github.io/Baidu/TodoList/"><img src="images/TodoList.png" style="width:50%;height:50%;"></a>	
 						</figure>
 				</div>
 			</section>
